{
    "name": "PlayerControler",
    "maps": [
        {
            "name": "BasicHandler",
            "id": "e4ab26bc-c4fa-4b80-b220-f74f41ffe1d5",
            "actions": [
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "6b83f952-b7bb-4d5f-bbb8-7a8c6bb0c722",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnSelectUnit",
                    "type": "Button",
                    "id": "7f7fccdc-52b8-4903-968a-447bc6007a5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnDeselectUnit",
                    "type": "Button",
                    "id": "d344688e-7395-4e09-a868-f3cd41b2e803",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "70ed0967-5ae7-411b-8e03-545c495fdc1d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c21f816-017c-414b-99c6-174405d390cf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "OnSelectUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd393bab-0dca-4fd1-85de-16ce79ddb836",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "OnDeselectUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SelectedUnitHandler",
            "id": "5ae7c11f-48bb-44a5-923c-e1e29514f43d",
            "actions": [
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "97ff0659-d55e-4164-93de-8a8d990d1f0c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnSelectUnit",
                    "type": "Button",
                    "id": "7c60feb9-a44f-4f5a-a0e1-622b0a177121",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnDeselectUnit",
                    "type": "Button",
                    "id": "20393e1b-30c9-41ca-88fa-7193553caa11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnSpecialAbility",
                    "type": "Button",
                    "id": "a1ae4516-2b2a-49df-b8fe-2fefe250d26f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnAbility4",
                    "type": "Button",
                    "id": "2f0189b5-45f0-4009-b833-f3c6a85e6101",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnAbility3",
                    "type": "Button",
                    "id": "2d3d35cf-1104-4cfe-9d88-5e1fd3b8a3b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnAbility2",
                    "type": "Button",
                    "id": "062bded8-9449-48c0-a937-c96c0fc9825d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnAbility1",
                    "type": "Button",
                    "id": "e47ba086-0dc8-4de4-b356-672926eda41c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7cff0be3-23ae-4267-a3bd-80e82668d7ac",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17d27095-6698-4059-92b3-3cca42defbc5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "OnSelectUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86574785-46d4-46d0-86fd-0461d04998a5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "OnDeselectUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "808e91dc-f383-4f48-a7eb-2ff2931e0e5c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "OnSpecialAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d006effc-75ea-4f41-ac63-d4097bd3753e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "OnAbility1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92d98779-97a7-4fe0-aa43-e7fd5ad39871",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "OnAbility2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0973708f-70d3-4c9f-bc58-feac591dce92",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "OnAbility3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba26f326-feed-4620-9647-7f7af309ed57",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "OnAbility4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TargetableAbilityHandler",
            "id": "5cbea68b-cec6-41ec-a4b7-51702350872e",
            "actions": [
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "b3284e07-9ff6-42c5-97c1-07af0ce8ba77",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnDeselect",
                    "type": "Button",
                    "id": "f2494951-5d23-4863-811c-9f995df0228c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnSelect",
                    "type": "Button",
                    "id": "e47b430d-0060-44a4-9531-540a70aa1f52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "62b54719-0950-453e-97e2-75a2d216ae02",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "106f24d3-7f40-47ee-a3cb-eebdfaeb3b41",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "OnSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2184c37f-7573-4de9-8ee0-edee4fd34a87",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "OnDeselect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}